tests/baselines/reference/stringLiteralsFromConstToLet01.errors.txt
tests/cases/conformance/types/stringLiteral/stringLiteralsFromConstToLet01.ts(10,1): error TS2322: Type '"C"' is not assignable to type '"A" | "B"'.
tests/cases/conformance/types/stringLiteral/stringLiteralsFromConstToLet01.ts(15,1): error TS2322: Type '"C"' is not assignable to type '"A" | "B"'.


==== tests/cases/conformance/types/stringLiteral/stringLiteralsFromConstToLet01.ts (2 errors) ====
    
    declare var randVal: boolean;
    
    const a = randVal ? "A" : "B";
    const b = a;
    
    let c = a;
    c = "A";
    c = "B";
    c = "C";
    ~
!!! error TS2322: Type '"C"' is not assignable to type '"A" | "B"'.
    
    let d = b;
    d = "A";
    d = "B";
    d = "C";
    ~
!!! error TS2322: Type '"C"' is not assignable to type '"A" | "B"'.
    